worked on frondend and backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
 PORT=""
 MONGO_URI=""
 SECRET_KEY=""
+#please use your own credentails of cloudary 
+CLOUD_NAME=dbaxltgct
+CLOUD_API_KEY=466997282257436
+CLOUD_SECERET_KEY=qQ8Nxy6kfJHPMk80tMu7W0HNImw
